# json11

./: CMakeLists.txt  Linux-ModularSetup.sh  Windows-ModularSetup.bat
Private/: json11.cpp
Public/json11/: Module.h  json11.hpp
Scripts/: CodeFiles.cmake
Tests/: CMakeLists.txt  EntryPoint.cpp  test.cpp
